--- a/styles/index.css
+++ b/styles/index.css
@@ -34,6 +34,33 @@ img {
   color: var(--text-color);
 }
 
+.title {
+  color: var(--primary-color);
+  font-weight: 700;
+  font-size: 2rem;
+  text-transform: uppercase;
+}
+
+.item-preTitle {
+  margin-top: 2rem;
+  font-size: 1.4rem;
+  color: var(--text-color);
+  font-weight: 300;
+}
+
+.item-title {
+  font-size: 1.6rem;
+  color: white;
+  font-weight: 500;
+  margin: 0.8rem 0;
+}
+
+.item-subtitle {
+  font-size: 1.4rem;
+  color: var(--text-color);
+  font-weight: 400;
+}
+
 a {
   text-decoration: none;
   color: white;
@@ -63,6 +90,12 @@ a {
 .profile {
   grid-column: 1 / -1;
   margin-bottom: 2rem;
+}
+
+.group-1, .group-2 {
+  display: flex;
+  flex-direction: column;
+  gap: 5rem;
 }
 
 /* profile */
@@ -114,3 +147,42 @@ a {
     flex-direction: column;
   }
 }
+
+/* Skills */
+.skill-lists {
+  margin-top: 1rem;
+  margin-left: 2rem;
+  line-height: 2;
+}
+
+/* References */
+.ref-item {
+  margin-top: 2rem;
+}
+
+.ref-name {
+ margin-top: 2rem;
+ font-size: 1.6rem; 
+ font-weight: 700;
+}
+
+/* education */
+.edu-item {
+  margin-top: 2rem;
+}
+
+/* certification */
+.certification-item {
+  margin-top: 2rem;
+}
+
+/* experiences */
+.exp-item {
+  margin-top: 2rem;
+}
+
+/* projects */
+project-item {
+  margin-top: 2rem;
+}
+
