--- a/styles/index.css
+++ b/styles/index.css
@@ -186,3 +186,24 @@ project-item {
   margin-top: 2rem;
 }
 
+/* Interest */
+.interest-items {
+  margin-top: 2rem;
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+
+.interest-item {
+  font-size: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+}
+
+.interest-item svg {
+  width: 2rem;
+}
