--- a/styles/index.css
+++ b/styles/index.css
@@ -22,7 +22,6 @@ body {
 }
 
 /* common styles */
-
 img { 
   width: 100%;
 }
@@ -92,10 +91,35 @@ a {
   margin-bottom: 2rem;
 }
 
-.group-1, .group-2 {
+.group-1, 
+.group-2 {
   display: flex;
   flex-direction: column;
   gap: 5rem;
+}
+
+.group-3 {
+  max-width: 700px;
+  width: 100%;
+  margin: 0 auto;
+  grid-column: 1/-1;
+  display: flex;
+  flex-direction: row;
+  gap: 5rem;
+}
+
+.group-3 > div {
+  flex: 1;
+}
+
+@media only screen and (max-width: 768px) {
+  .profile {
+    margin-bottom: 0;
+  }
+
+  .group-3 {
+    flex-direction: column;
+  }
 }
 
 /* profile */
@@ -206,4 +230,44 @@ project-item {
 
 .interest-item svg {
   width: 2rem;
+}
+
+/* socials */
+.social-items {
+  margin-top: 2rem;
+}
+
+.social-item {
+  margin-top: 1.5rem;
+  font-size: 1.5rem;
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+  justify-content: flex-start;
+  color: var(--text-color);
+}
+
+.social-item:hover {
+  color: var(--primary-color);
+}
+
+.social-item svg {
+  width: 2rem;
+}
+
+
+hr {
+  grid-column: 1/-1;
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 5rem;
+  margin-bottom: 1rem;
+  border: none;
+  border-top: 2px solid rgba(128, 128, 128, 0.301);
+}
+
+@media only screen and (max-width: 768px){
+  hr {
+    margin: 0 auto;
+  }
 }
